tests/neg-custom-args/noimports2.scala
object Test {
  assert("asdf" == "asdf") // error: not found assert
}
